Added readonly fields to scheduling. BUG: They are not refreshed after a save and accumulator countdown is not implemented